--- a/test-cases.yml
+++ b/test-cases.yml
@@ -340,7 +340,7 @@
     Корзина пустая
 
 - summary: |
-    Проверка фильтра начальной границы цены на положительные значения
+    Проверка фильтра начальной границы цены на минимальное значение
   requirement: |
     Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
@@ -351,6 +351,214 @@
   steps:
     - Находим фильтры цены в боком меню
     - Кликаем на фильтр начальной границы цены 
-    - Вводим
+    - Вводим "0.1"
   expected-result: |
-    Корзина пустая
+    В каталоге остаются товары выше "0.1" цены
+
+- summary: |
+    Проверка фильтра начальной границы цены положительные значения 
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "5"
+  expected-result: |
+    В каталоге должны остаться товары выше 5
+
+- summary: |
+    Проверка фильтра начальной границы цены на 0
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "0"
+  expected-result: |
+    В каталоге должны остаться все товары
+
+- summary: |
+    Проверка фильтра начальной границы цены на отрицательные значения
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "-1"
+  expected-result: |
+    Данные не должны обработаться формой
+
+- summary: |
+    Проверка фильтра начальной границы цены на большедопустимое значение
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "6677"
+  expected-result: |
+    Все товары должны отфильтроваться в каталоге
+
+- summary: |
+    Проверка фильтра начальной границы цены на введение букв
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "a"
+  expected-result: |
+    Данные не должны обработаться формой
+
+- summary: |
+    Проверка фильтра начальной границы цены на специальные символы
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "<"
+  expected-result: |
+    Данные не должны обработаться формой
+!
+- summary: |
+    Проверка фильтра конечной границы цены на минимальное значение
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "0.1"
+  expected-result: |
+    В каталоге остаются товары выше "0.1" цены
+
+- summary: |
+    Проверка фильтра конечной границы цены положительные значения 
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "5"
+  expected-result: |
+    В каталоге должны остаться товары выше 5
+
+- summary: |
+    Проверка фильтра конечной границы цены на 0
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "0"
+  expected-result: |
+    В каталоге должны остаться все товары
+
+- summary: |
+    Проверка фильтра конечной границы цены на отрицательные значения
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "-1"
+  expected-result: |
+    Данные не должны обработаться формой
+
+- summary: |
+    Проверка фильтра конечной границы цены на большедопустимое значение
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "6677"
+  expected-result: |
+    Все товары должны отфильтроваться в каталоге
+
+- summary: |
+    Проверка фильтра конечной границы цены на введение букв
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "a"
+  expected-result: |
+    Данные не должны обработаться формой
+
+- summary: |
+    Проверка фильтра конечной границы цены на специальные символы
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites: |
+    Открыта главная страница сайта
+    https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовые данные
+  steps:
+    - Находим фильтры цены в боком меню
+    - Кликаем на фильтр начальной границы цены 
+    - Вводим "<"
+  expected-result: |
+    Данные не должны обработаться формой
