--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка поиска
+    Проверка поисковой строки
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
@@ -218,7 +218,7 @@
     Остаемся в корзине и ничего не происходит
 
 - summary: |
-    Проверка скорости загрузки сайта
+    Проверка скорости загрузки сайта с хорошим интернет соединением
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
@@ -231,7 +231,7 @@
     Сайт загружается быстро и без ошибок
 
 - summary: |
-    Проверка скорости загрузки сайта
+    Проверка скорости загрузки сайта со средним интернет соединением
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
@@ -244,7 +244,7 @@
     Сайт загружается быстро и без ошибок
 
 - summary: |
-    Проверка скорости загрузки сайта
+    Проверка скорости загрузки сайта с плохим интернет соединением
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
@@ -322,7 +322,7 @@
     Товар остается в корзине
 
 - summary: |
-    Проверка сохранении корзины
+    Проверка корзины при закрытии сессии браузера
   requirement: |
     Корзина будет хранится в сессии браузера
   prerequisites: |
@@ -351,7 +351,7 @@
   steps:
     - Находим фильтры цены в боком меню
     - Кликаем на фильтр начальной границы цены 
-    - Вводим "0.1"
+    - Вводим "0.01"
   expected-result: |
     В каталоге остаются товары выше "0.1" цены
 
@@ -463,9 +463,9 @@
   steps:
     - Находим фильтры цены в боком меню
     - Кликаем на фильтр начальной границы цены 
-    - Вводим "0.1"
+    - Вводим "0.01"
   expected-result: |
-    В каталоге остаются товары выше "0.1" цены
+    В каталоге фильтруются все товары
 
 - summary: |
     Проверка фильтра конечной границы цены положительные значения 
@@ -481,7 +481,7 @@
     - Кликаем на фильтр начальной границы цены 
     - Вводим "5"
   expected-result: |
-    В каталоге должны остаться товары выше 5
+    В каталоге должны остаться ниже 5
 
 - summary: |
     Проверка фильтра конечной границы цены на 0
@@ -497,7 +497,7 @@
     - Кликаем на фильтр начальной границы цены 
     - Вводим "0"
   expected-result: |
-    В каталоге должны остаться все товары
+    В каталоге скрыться все товары
 
 - summary: |
     Проверка фильтра конечной границы цены на отрицательные значения
@@ -529,7 +529,7 @@
     - Кликаем на фильтр начальной границы цены 
     - Вводим "6677"
   expected-result: |
-    Все товары должны отфильтроваться в каталоге
+    Все товары должны остаться в каталоге
 
 - summary: |
     Проверка фильтра конечной границы цены на введение букв
