--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,22 +1,22 @@
 ---
 - summary: |
-    Проверка работоспособности поисковой строки
+    Проверка поисковой строки
   status: fail
 
 - summary: |
-    Проверка работоспособности категорий
+    Проверка фильтрации по категориям
   status: fail
 
 - summary: |
-    Проверка работоспособности фильтров
+    Проверка фильтров
   status: pass
 
 - summary: |
-    Проверка работоспособности карточек товаров
+    Проверка карточек товаров
   status: pass
 
 - summary: |
-    Проверка работоспособности корзины
+    Проверка добавления товара в корзину
   status: pass
 
 - summary: |
@@ -28,5 +28,134 @@
   status: pass
 
 - summary: |
-    Загрузка мобильной версия сайта
+    Проверка кнопки перехода вперед по страницам
+  status: pass
+
+- summary: |
+    Проверка кнопки перехода назад по страницам
+  status: pass
+
+- summary: |
+    Проверка кнопки перехода назад на первой странице сайта
+  status: pass
+
+- summary: |
+    Проверка кнопки "Отчистить корзину"
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта с хорошим интернет соединением
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта со средним интернет соединением
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта с плохим интернет соединением
+  status: pass
+
+- summary: |
+    Пров
+  status: pass
+
+- summary: |
+    Проверка английской версии сайта
+  status: pass
+
+- summary: |
+    Проверка русской версии сайта
   status: fail
+
+- summary: |
+    Пров
+  status: pass
+
+- summary: |
+    Пров
+  status: pass
+
+- summary: |
+    Проверка кнопки смены языка
+  status: pass
+
+- summary: |
+    Проверка сохранении корзины
+  status: pass
+
+- summary: |
+    Проверка корзины при закрытии сессии браузера
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на минимальное значение
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены положительные значения 
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на 0
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на отрицательные значения
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на большедопустимое значение
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на введение букв
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на специальные символы
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на минимальное значение
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены положительные значения 
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на 0
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на отрицательные значения
+  status: fail
+
+- summary: |
+    Проверка фильтра конечной границы цены на отрицательные значения
+  status: fail
+
+- summary: |
+    Проверка фильтра конечной границы цены на большедопустимое значение
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на введение букв
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на специальные символы
+  status: pass
+
+- summary: |
+    Пров
+  status: pass
+
+- summary: |
+    Пров
+  status: pass
+
+- summary: |
+    Пров
+  status: pass
+
