--- a/bugreports.yml
+++ b/bugreports.yml
@@ -81,3 +81,94 @@
   actual-result: |
     Открывается уведомление об успешном оформлении заказа, но запрос уходит на сервер c ошибкой (500)
     Ошибка изображена на скриншоте bug3.jpg
+
+
+- summary: |
+    Съезжает верстка списка товаров в корзине
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Добавить несколько разных товаров в корзину
+    3. Нажать "Корзина" в верхнем меню экрана
+  expected-result: |
+    Список товаров выглядит в соотвествии с макетом
+  actual-result: |
+    Съезжает количество товаров в списке
+    Ошибка изображена на скриншоте bug7.jpg
+
+- summary: |
+    Нет иконки английского языка
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти кнопку смены языка вверхнем меню экрана
+    3. Нажать "Язык"
+  expected-result: |
+    У каждого языка есть своя иконка
+  actual-result: |
+    Нет иконки английского языка
+    Ошибка изображена на скриншоте bug8.jpg
+
+- summary: |
+    В русской версии сайта описание товаров на английском
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти кнопку смены языка вверхнем меню экрана
+    3. Нажать "Русский"
+  expected-result: |
+    Вся веб страница загружается на русском языке
+  actual-result: |
+    Описание товаров остается на английском языке
+    Ошибка изображена на скриншоте bug9.jpg
+
+- summary: |
+    Шапка сайта не закреплена
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Проскроллить вниз каталог
+  expected-result: |
+    Шапка сайта закреплена
+  actual-result: |
+    Шапка не закреплена
+    Ошибка изображена на скриншоте bug11.jpg
+
+- summary: |
+    Невозможно вернуться на первую страницу сайта
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Перейти на следующую страницу сайта
+    3. Продолжать, пока не будет достигнута последняя страница
+    3. Попробовать вернуться назад на первую страницу через кнопку "Предыдущая"
+  expected-result: |
+    Возможность перейти на последнюю и первую страницу сайта через кнопки "Следующая/Предыдущая"
+  actual-result: |
+    "Предыдущая" не возращает в начало сайта и отпадает часть товаров в каталоге
+    Ошибка изображена на скриншоте bug12.jpg
+
+- summary: |
+    Можно ввести значение "-1" в конечную границу фильтра цены
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти фильтр цены
+    3. Ввести "-1" в поле конечной границы фильтра
+  expected-result: |
+    Невозможно ввести отрицательные значения в поле цены
+  actual-result: |
+    "-1" вводится и показывает пустой каталог
+    Ошибка изображена на скриншоте bug13.jpg
