--- a/testing-report.yml
+++ b/testing-report.yml
@@ -53,7 +53,7 @@
 
 - summary: |
     Проверка скорости загрузки сайта с плохим интернет соединением
-  status: pass
+  status: fail
 
 - summary: |
     Проверка английской версии сайта
