--- a/bugreports.yml
+++ b/bugreports.yml
@@ -172,3 +172,17 @@
   actual-result: |
     "-1" вводится и показывает пустой каталог
     Ошибка изображена на скриншоте bug13.jpg
+
+- summary: |
+    Долго грузится сайт с плохим интернет соединением 
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+  expected-result: |
+    Сайт быстро прогружается
+  actual-result: |
+    Долго грузится сайт с плохим интернет соединением
+    Картинки товаров в png
+    Ошибка изображена на скриншоте bug14.jpg
