--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,105 +1,144 @@
 ---
-test-cases:
 - summary: |
-    Проверка работоспособности поисковой строки
+    Проверка поисковой строки
   status: fail
-  requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим поисковую строку
-    - Вводим "Red"
-  expected-result: |
-    Должны быть отображены все товары с "red" в названии
-    
+
 - summary: |
-    Проверка работоспособности категорий
+    Проверка фильтрации по категориям
   status: fail
-  requirement: |
-    Пользователь должен иметь возможность искать товары по ключевому слову или категории
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим выпадающий список категорий
-    - Открываем выпадающий список
-  expected-result: |
-    В списке должны отобразиться все категории товаров
 
 - summary: |
-    Проверка работоспособности фильтров
+    Проверка фильтров
   status: pass
-  requirement: |
-    Пользователь должен иметь возможность фильтровать товары
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим фильтры товаров в боковом меню
-    - Отмечаем флажок нужного фильтра
-  expected-result: |
-    В списке товаров должна остаться только товары из фильтра
 
 - summary: |
-    Проверка работоспособности карточек товаров
+    Проверка карточек товаров
   status: pass
-  requirement: |
-    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим нужный товар на главной странице сайта
-    - Кликаем на карточку товара
-  expected-result: |
-    Открывается страница товара с его ценой, рейтингом и описанием
 
 - summary: |
-    Проверка работоспособности корзины
+    Проверка добавления товара в корзину
   status: pass
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-  expected-result: |
-    Открывается корзина пользователя со списком добавленных товаров 
 
 - summary: |
     Проверка оформления заказа
   status: fail
-  requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину и делать заказ
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - На странице корзины нажимаем "Оформить заказ"
-  expected-result: |
-    Открывается уведомление об успешном оформлении заказа и запрос уходит на сервер
 
 - summary: |
     Проверка удаления товаров из корзины
   status: pass
-  requirement: |
-    Пользователь должен иметь возможность удалять товары из корзины
-  prerequisites: |
-    Открыта главная страница сайта
-    https://hexlet-products-store.vercel.app/
-  steps:
-    - Находим любой товар в каталоге товаров
-    - Кликает на кнопку "В Корзину"
-    - Нажимаем на кнопку Корзина в верхнем меню экрана
-    - Нажимаем кнопку удалить возле ненужного товара
-  expected-result: |
-    Товар удаляется из корзины и сумма изменяется с учетом удаленного товара
 
+- summary: |
+    Проверка кнопки перехода вперед по страницам
+  status: pass
+
+- summary: |
+    Проверка кнопки перехода назад по страницам
+  status: pass
+
+- summary: |
+    Проверка кнопки перехода назад на первой странице сайта
+  status: pass
+
+- summary: |
+    Проверка кнопки "Отчистить корзину"
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта с хорошим интернет соединением
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта со средним интернет соединением
+  status: pass
+
+- summary: |
+    Проверка скорости загрузки сайта с плохим интернет соединением
+  status: fail
+
+- summary: |
+    Проверка английской версии сайта
+  status: pass
+
+- summary: |
+    Проверка русской версии сайта
+  status: fail
+
+- summary: |
+    Проверка кнопки смены языка
+  status: pass
+
+- summary: |
+    Проверка сохранении корзины
+  status: pass
+
+- summary: |
+    Проверка корзины при закрытии сессии браузера
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на минимальное значение
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены положительные значения 
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на 0
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на отрицательные значения
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на большедопустимое значение
+  status: fail
+
+- summary: |
+    Проверка фильтра начальной границы цены на введение букв
+  status: pass
+
+- summary: |
+    Проверка фильтра начальной границы цены на специальные символы
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на минимальное значение
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены положительные значения 
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на 0
+  status: fail
+
+- summary: |
+    Проверка фильтра конечной границы цены на отрицательные значения
+  status: fail
+
+- summary: |
+    Проверка фильтра конечной границы цены на большедопустимое значение
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на введение букв
+  status: pass
+
+- summary: |
+    Проверка фильтра конечной границы цены на специальные символы
+  status: pass
+
+- summary: |
+    Проверка оформления заказа Google Chrome последней версии
+  status: pass
+
+- summary: |
+    Проверка работы сайта на Firefox последней версии
+  status: pass
+
+- summary: |
+    Проверка работы сайта на Edge последней версии
+  status: pass
