--- a/regress-report.yml
+++ b/regress-report.yml
@@ -113,7 +113,7 @@
 
 - summary: |
     Проверка фильтра конечной границы цены на 0
-  status: fail
+  status: pass
 
 - summary: |
     Проверка фильтра конечной границы цены на отрицательные значения
@@ -142,3 +142,64 @@
 - summary: |
     Проверка работы сайта на Edge последней версии
   status: pass
+
+ bugreports:
+- summary: |
+    Фильтры по производителю сбивают результаты поиска
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Ввести в поисковую строку запрос
+    3. Нажать любой фильтр производителя
+  expected-result: |
+    Результаты поиска фильтруются по производителю
+  actual-result: |
+    Фильтры по производителю сбивают результаты поиска и выводят все товары
+    Ошибка изображена на скриншоте rbug01.jpg
+
+- summary: |
+    В русской версии сайта при обновлении страницы язык переключается на английский
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Поменять язык на русский в шапке сайта
+    3. Обновить страницу в браузере
+  expected-result: |
+    Язык остается русским
+  actual-result: |
+    Язык меняется на английский
+    Ошибка изображена на скриншоте rbug02.gif
+
+- summary: |
+    При большом начальном значении фильтра цены все равно отображаются все товары
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти фильтры цены в боком меню
+    3. Ввести большое начальное значение цены, например "9999"
+  expected-result: |
+    Нет результатов по фильтрации
+  actual-result: |
+    Остаются все товары в каталоге
+    Ошибка изображена на скриншоте rbug03.jpg
+
+- summary: |
+    При минимальном количестве товаров верстка съезжает
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти фильтры цены в боком меню
+    3. Ввести конечное значение цены, например "1"
+  expected-result: |
+    Нормально отображется один товар 
+  actual-result: |
+    Вертска съезжает на большинстве элементах сайта в каталоге
+    Ошибка изображена на скриншоте rbug04.jpg
