--- a/testing-report.yml
+++ b/testing-report.yml
@@ -113,7 +113,7 @@
 
 - summary: |
     Проверка фильтра конечной границы цены на 0
-  status: pass
+  status: fail
 
 - summary: |
     Проверка фильтра конечной границы цены на отрицательные значения
