--- a/bugreports.yml
+++ b/bugreports.yml
@@ -186,3 +186,20 @@
     Долго грузится сайт с плохим интернет соединением
     Картинки товаров в png
     Ошибка изображена на скриншоте bug14.jpg
+
+- summary: |
+    Можно ввести 0 в конечное значение фильтра цены
+  environment: |
+    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+    Windows 11 Pro 23H2
+  steps-to-reproduce: |
+    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+    2. Найти фильтр цены в боком меню сайта
+    3. Ввести "0" в конечное значение фильтра цены
+  expected-result: |
+    Не может быть максимальная цена товара 0. Либо 0 не вводится, либо отображется самый дешевый товар
+  actual-result: |
+    0 вводится и фильтрует все товары
+    Ошибка изображена на скриншоте bug15.jpg
+    Картинки товаров в png
+    Ошибка изображена на скриншоте bug14.jpg
